<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">
	<LinearLayout 
	    android:id="@+id/group_line1"
	    style="@style/ll_group"
	    android:layout_width="match_parent"
	    android:layout_height="60dp"
	    android:orientation="horizontal">
	    <View
	        android:id="@+id/main_logo"
	        android:clickable="true" 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="5"
	        android:layout_marginStart="@dimen/main_item_margin"
	        android:layout_marginEnd="11dp"
	        android:layout_marginTop="11dp"
	        android:layout_marginBottom="15dp"
	        android:background="@drawable/logo"/>
	    <View 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"/>
	    <LinearLayout 
	        android:id="@+id/ble_group"
	        android:clickable="true"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="4"
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="5dp"
	        android:layout_marginStart="15dp"
	        android:layout_marginEnd="@dimen/main_item_margin"
	        android:orientation="vertical">
	        <RelativeLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content">
	            <TextView 
	                android:id="@+id/ble_status_name"
	                android:layout_alignParentStart="true"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/ble_status_disconnected"/>
	            <View 
	                android:id="@+id/ble_status_icon"
	                android:layout_width="15dp"
	                android:layout_height="15dp"
	                android:layout_alignParentEnd="true"
	                android:layout_centerVertical="true"
	                android:background="@drawable/ble_state_disconnected"/>
	        </RelativeLayout>
	        <TextView 
	            android:id="@+id/ble_device_name"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="2dp"
	            android:background="@drawable/txt_border_gray"/>
	    </LinearLayout>
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/group_line2"
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:layout_below="@id/group_line1"
	    android:orientation="horizontal">
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:background="@drawable/txt_border_gray"
	        android:layout_marginStart="15dp"
	        android:layout_marginEnd="10dp"
	        android:text="500 RPM"/>
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="2"
	        android:layout_marginStart="10dp"
	        android:layout_marginEnd="15dp"
	        android:orientation="vertical">
	        <SeekBar 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:paddingStart="0dp"
	            android:paddingEnd="0dp"
	            android:minHeight="3dp"
	            android:max="100"
	            android:progress="20"
	            style="@android:style/Widget.DeviceDefault.SeekBar"/>
	        <RelativeLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content">
	            <TextView 
	                android:layout_alignParentStart="true"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/txt_speed_min"/>
	            <TextView 
	                android:layout_alignParentEnd="true"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/txt_speed_max"/>
	            <TextView 
	                android:layout_centerHorizontal="true"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/txt_speed_default"/>
	        </RelativeLayout>
	    </LinearLayout>
	</LinearLayout>
    
    <LinearLayout 
        android:id="@+id/group_line4"
        android:layout_height="90dp"
        android:layout_width="match_parent"
        android:padding="7.5dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button 
            android:id="@+id/btn_trace1"
            style="@style/btnStyle2"
            android:text="@string/btn_trace1"/>
        <Button 
            android:id="@+id/btn_trace2"
            style="@style/btnStyle2"
            android:text="@string/btn_trace2"/>
        <Button 
            android:id="@+id/btn_trace3"
            style="@style/btnStyle2"
            android:text="@string/btn_trace3"/>
        <Button 
            android:id="@+id/btn_trace4"
            style="@style/btnStyle2"
            android:text="@string/btn_trace4"/>
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/group_line5"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/group_line2"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:orientation="horizontal">
        <TextView 
            style="@style/ll_style1"
            android:gravity="center"
            android:layout_weight="1.8"
            android:text="@string/txt_pos_title_min"/>
        <TextView 
            style="@style/ll_style1"
            android:gravity="center"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="2.4"
            android:text="@string/txt_pos_title_curr"/>
        <TextView 
            style="@style/ll_style1"
            android:gravity="center"
            android:layout_weight="1.8"
            android:text="@string/txt_pos_title_max"/>
        <View 
            style="@style/ll_style2"/>
        <View 
            style="@style/ll_style2"/>
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/group_line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/group_line5"
        android:layout_above="@id/group_line4"
        android:paddingStart="@dimen/main_group_cmd_padding_left"
        android:paddingEnd="@dimen/main_group_cmd_padding_right"
        android:columnCount="12">
        <!-- 第1列 -->
        <LinearLayout 
            style="@style/ll_style1">
            <TextView 
                android:id="@+id/txt_pos_min6"
                style="@style/text3"
                android:text="@string/txt_pos_min6"/>
            <TextView 
                android:id="@+id/txt_pos_min5"
                style="@style/text3"
                android:text="@string/txt_pos_min5"/>
            <TextView 
                android:id="@+id/txt_pos_min4"
                style="@style/text3"
                android:text="@string/txt_pos_min4"/>
            <TextView 
                android:id="@+id/txt_pos_min3"
                style="@style/text3"
                android:text="@string/txt_pos_min3"/>
            <TextView 
                android:id="@+id/txt_pos_min2"
                style="@style/text3"
                android:text="@string/txt_pos_min2"/>
            <TextView 
                android:id="@+id/txt_pos_min1"
                style="@style/text3"
                android:text="@string/txt_pos_min1"/>
        </LinearLayout>
        <!-- 第2列 -->
        <LinearLayout 
            style="@style/ll_style1">
            <TextView 
                android:id="@+id/txt_pos_curr6"
                style="@style/text1"
                android:text="@string/txt_pos_curr"/>
            <TextView 
                android:id="@+id/txt_pos_curr5"
                style="@style/text1"
                android:text="@string/txt_pos_curr"/>
            <TextView 
                android:id="@+id/txt_pos_curr4"
                style="@style/text1"
                android:text="@string/txt_pos_curr"/>
            <TextView 
                android:id="@+id/txt_pos_curr3"
                style="@style/text1"
                android:text="@string/txt_pos_curr"/>
            <TextView 
                android:id="@+id/txt_pos_curr2"
                style="@style/text1"
                android:text="@string/txt_pos_curr"/>
            <TextView 
                android:id="@+id/txt_pos_curr1"
                style="@style/text1"
                android:text="@string/txt_pos_curr"/>
        </LinearLayout>
        <!-- 第3列 -->
        <LinearLayout 
            style="@style/ll_style1">
            <TextView 
                android:id="@+id/txt_pos_max6"
                style="@style/text3"
                android:text="@string/txt_pos_max6"/>
            <TextView 
                android:id="@+id/txt_pos_max5"
                style="@style/text3"
                android:text="@string/txt_pos_max5"/>
            <TextView 
                android:id="@+id/txt_pos_max4"
                style="@style/text3"
                android:text="@string/txt_pos_max4"/>
            <TextView 
                android:id="@+id/txt_pos_max3"
                style="@style/text3"
                android:text="@string/txt_pos_max3"/>
            <TextView 
                android:id="@+id/txt_pos_max2"
                style="@style/text3"
                android:text="@string/txt_pos_max2"/>
            <TextView 
                android:id="@+id/txt_pos_max1"
                style="@style/text3"
                android:text="@string/txt_pos_max1"/>
        </LinearLayout>
        <!-- 第4列 -->
        <LinearLayout 
            style="@style/ll_style2">
            <Button 
                android:id="@+id/btn_move_add6"
                style="@style/btn1"
                android:text="@string/btn_move_add6"/>
            <Button 
                android:id="@+id/btn_move_add5"
                style="@style/btn1"
                android:text="@string/btn_move_add5"/>
            <Button 
                android:id="@+id/btn_move_add4"
                style="@style/btn1"
                android:text="@string/btn_move_add4"/>
            <Button 
                android:id="@+id/btn_move_add3"
                style="@style/btn1"
                android:text="@string/btn_move_add3"/>
            <Button 
                android:id="@+id/btn_move_add2"
                style="@style/btn1"
                android:text="@string/btn_move_add2"/>
            <Button 
                android:id="@+id/btn_move_add1"
                style="@style/btn1"
                android:text="@string/btn_move_add1"/>
        </LinearLayout>
        <!-- 第5列 -->
        <LinearLayout 
            style="@style/ll_style2">
            
            <Button 
                android:id="@+id/btn_move_sub6"
                style="@style/btn1"
                android:text="@string/btn_move_sub6"/>
            <Button 
                android:id="@+id/btn_move_sub5"
                style="@style/btn1"
                android:text="@string/btn_move_sub5"/>
            <Button 
                android:id="@+id/btn_move_sub4"
                style="@style/btn1"
                android:text="@string/btn_move_sub4"/>
            <Button 
                android:id="@+id/btn_move_sub3"
                style="@style/btn1"
                android:text="@string/btn_move_sub3"/>
            <Button 
                android:id="@+id/btn_move_sub2"
                style="@style/btn1"
                android:text="@string/btn_move_sub2"/>
            <Button 
                android:id="@+id/btn_move_sub1"
                style="@style/btn1"
                android:text="@string/btn_move_sub1"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
